--- a/advert_class_error.ipynb
+++ b/advert_class_error.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "3e9aecd1",
    "metadata": {
     "scrolled": true
@@ -38,6 +38,129 @@
       "dtypes: int64(5), object(13)\n",
       "memory usage: 2.5+ MB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_id</th>\n",
+       "      <th>telecommuting</th>\n",
+       "      <th>has_company_logo</th>\n",
+       "      <th>has_questions</th>\n",
+       "      <th>fraudulent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>17880.000000</td>\n",
+       "      <td>17880.000000</td>\n",
+       "      <td>17880.000000</td>\n",
+       "      <td>17880.000000</td>\n",
+       "      <td>17880.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8940.500000</td>\n",
+       "      <td>0.042897</td>\n",
+       "      <td>0.795302</td>\n",
+       "      <td>0.491723</td>\n",
+       "      <td>0.048434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5161.655742</td>\n",
+       "      <td>0.202631</td>\n",
+       "      <td>0.403492</td>\n",
+       "      <td>0.499945</td>\n",
+       "      <td>0.214688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4470.750000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8940.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>13410.250000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>17880.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             job_id  telecommuting  has_company_logo  has_questions  \\\n",
+       "count  17880.000000   17880.000000      17880.000000   17880.000000   \n",
+       "mean    8940.500000       0.042897          0.795302       0.491723   \n",
+       "std     5161.655742       0.202631          0.403492       0.499945   \n",
+       "min        1.000000       0.000000          0.000000       0.000000   \n",
+       "25%     4470.750000       0.000000          1.000000       0.000000   \n",
+       "50%     8940.500000       0.000000          1.000000       0.000000   \n",
+       "75%    13410.250000       0.000000          1.000000       1.000000   \n",
+       "max    17880.000000       1.000000          1.000000       1.000000   \n",
+       "\n",
+       "         fraudulent  \n",
+       "count  17880.000000  \n",
+       "mean       0.048434  \n",
+       "std        0.214688  \n",
+       "min        0.000000  \n",
+       "25%        0.000000  \n",
+       "50%        0.000000  \n",
+       "75%        0.000000  \n",
+       "max        1.000000  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -53,14 +176,15 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn import svm\n",
     "\n",
-    "posting = pd.read_csv('fake_job_postings.csv')\n",
+    "posting = pd.read_csv('/Users/ebukaezenwafor/Desktop/jupyter/fake_job_postings.csv')\n",
     "pd.set_option(\"display.max_columns\", None)\n",
-    "posting.info()"
+    "posting.info()\n",
+    "posting.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "b153737b",
    "metadata": {
     "scrolled": true
@@ -188,7 +312,7 @@
        "max         1.000000          1.000000       1.000000      1.000000"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "4b14b9d8",
    "metadata": {},
    "outputs": [
@@ -220,7 +344,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "df87ea51",
    "metadata": {},
    "outputs": [],
@@ -245,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "7a0260ac",
    "metadata": {
     "scrolled": true
@@ -271,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "bc80ad9d",
    "metadata": {
     "scrolled": true
@@ -283,7 +407,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "id": "51ea5340",
    "metadata": {},
    "outputs": [
@@ -311,7 +435,7 @@
        "array([0, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "id": "84800d13",
    "metadata": {
     "scrolled": true
@@ -331,10 +455,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9608501118568232"
+       "0.9624161073825503"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
